# uppsala-pyub

./: pyproject.toml  requirements.txt
.github/workflows/: prerelease.yml  release.yml
docs/: index.html  search.js  uppsala_pyub.html
docs/uppsala_pyub/: bibtex.html  cli.html  handle_results.html  query.html  soup.html
uppsala_pyub/: bibtex.py  cli.py  query.py
