[tool.poetry]
name = "uppsala-pyub"
version = "0.0.1"
description = "A python module and CLI to facilitate searching Uppsala University's catalog."
authors = ["bobborges <robert.borges@statistik.uu.se>"]
packages = [{include = "uppsala_pyub", from = ""}]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/bobborges/uppsala-pyub"
documentation = "https://github.com/bobborges/uppsala-pyub/docs"


[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.2"
requests-html = "^0.10.0"
lxml = "^5.3.0"

[tool.poetry.scripts]
pyub = "uppsala_pyub.cli:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
